# leaf

./: Cargo.toml  Makefile
.github/workflows/: ci.yml
leaf/: Cargo.toml
leaf-client/: Cargo.toml
leaf/src/app/: dns_client.rs  router.rs
leaf/src/app/inbound/: manager.rs  network_listener.rs
leaf/src/app/outbound/: manager.rs
leaf/src/config/internal/: config.rs
leaf/src/config/json/: config.rs
leaf/src/proxy/: mod.rs
leaf/src/proxy/failover/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/http_protocol/inbound/: mod.rs  stream.rs
leaf/src/proxy/tls/outbound/: stream.rs
leaf/src/proxy/tun/: inbound.rs
leaf/src/proxy/ws/outbound/: stream.rs
leaf/tests/: common.rs  test_direct.rs
scripts/: build_apple_xcframework.sh
ts-client/: Cargo.toml
ts-client/hpts/: Cargo.toml
ts-client/hpts/src/: hpts.rs  lib.rs  main.rs
ts-client/src/: config.json  lib.rs  main.rs
