[package]
name = "ts-client"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"


[lib]
name = "ts"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true,features = ["default","auto-reload","inbound-http"] }
hpts = { path = "hpts" }
tokio = { version = "*", features = ["rt"] }
futures = "0.3"
log = { version = "*", features = ["std"] }
rustdns ="*"

serde_json = { version = "*", features = ["raw_value"] }
# serde = { version = "*"}
# serde_derive ="*"
reqwest = { version = "0.11", features = ["blocking", "json"] }


[build-dependencies]
bindgen = "0.59.2"
