[package]
name = "hpts"
version = "0.1.4"
authors = ["hexyoungs <chuxdesign@hotmail.com>"]
description = "hpts(http-proxy-to-socks) is a tool to convert socks proxy into http proxy"
license = "BSD-3-Clause"
edition = "2018"
repository = "https://github.com/chux0519/hpts"

[dependencies]
tokio = { version = "1", features = ["full"] }
httparse = "1.3.4"
futures = "0.3.0"
log = { version = "0.4", features = ["std"] }
# env_logger="0.10.0"
